k8s/istio-comps.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: go-app-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: go-app
spec:
  hosts:
    - "*"
  gateways:
    - go-app-gateway
  http:
    - match:
        - uri:
            prefix: /hello/
        - uri:
            exact: /metrics
        - uri:
            prefix: /es
          queryParams:
            name:
              exact: Sahil
      route:
        - destination:
            host: go-app
            port:
              number: 8080

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destination-rule-python-app
spec:
  host: python-app.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
